#17 Created endpoint for retrieving the possible operators
