# code/wsc-calculator-api-rest/src/main/java/com/github/carollo95/wsccalculator/controller/BinaryApiImpl.java
@@ -7,16 +7,21 @@ package com.github.carollo95.wsccalculator.controller;
 
 import com.github.carollo95.wsccalculator.api.binaryoperations.dto.OperateParametersDTO;
 import com.github.carollo95.wsccalculator.api.binaryoperations.dto.OperateResultDTO;
+import com.github.carollo95.wsccalculator.api.binaryoperations.dto.OperatorDTO;
+import com.github.carollo95.wsccalculator.api.binaryoperations.service.BinaryOperationsService;
 import com.github.carollo95.wsccalculator.mapper.OperateParametersRestMapper;
 import com.github.carollo95.wsccalculator.mapper.OperateResultRestMapper;
+import com.github.carollo95.wsccalculator.mapper.OperatorRestMapper;
 import com.github.carollo95.wsccalculator.restdto.OperateParametersRestDTO;
 import com.github.carollo95.wsccalculator.restdto.OperateResultRestDTO;
-import com.github.carollo95.wsccalculator.api.binaryoperations.service.BinaryOperationsService;
+import com.github.carollo95.wsccalculator.restdto.OperatorRestDTO;
 import jakarta.validation.Valid;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
 import org.springframework.validation.annotation.Validated;
 import org.springframework.web.bind.annotation.RestController;
+
+import java.util.List;
 
 /**
  * Controller for the BinaryApi specification
@@ -32,7 +37,15 @@ public class BinaryApiImpl implements com.github.carollo95.wsccalculator.control
     private OperateParametersRestMapper operateParametersMapper;
     @Autowired
     private OperateResultRestMapper operateResultMapper;
+    @Autowired
+    private OperatorRestMapper operatorMapper;
 
+    @Override
+    public ResponseEntity<List<OperatorRestDTO>> getOperators() {
+        final List<OperatorDTO> serviceResponse = this.binaryOperationsService.getBinaryOperators();
+        final List<OperatorRestDTO> response = this.operatorMapper.dtoListToRestDtoList(serviceResponse);
+        return ResponseEntity.ok(response);
+    }
 
     /**
      * {@inheritDoc}
